	- Update for Bukkit R5 compatability.
	- Removed BukkitPermsOverride as this is now the default with bukkit handling child nodes.
	- Prevent adding inheritances and info nodes to globalgroups. These are permissions collections, not player groups.
	- Prevent promoting players to, and demoting to GlobalGroups.
	- Make 'manload' reload the config correctly.
	- Minor optimization when checking bukkit permissions.
	- Better reporting when a users.yml is failing to load.
	- Expanded '/manuadd'to accept an optional variable for the world (eg '/manuadd <player> <group> <world>').
	- Removed some debug spam.
	- Don't remove an attachment on a player leaving as Bukkit never forgets it. This fixes non mirrored permissions being messed up if a player relogs.
	- Treat all world names as lower case for file handling (please check in your worlds folder. You should have no folders with upper case letters from now).
	- Auto rename all case sensitive world folders to lower case (if possible).
	- Update GlobalGroups.yml for new/changed Towny permission nodes.
	- Stop attempting to push empty permissions when players edit the yml's incorrectly.
	- Catch errors caused by bad indentation in yml's.
	- Force remove player attachments on disconnect, and tidyup during player join in case of any errors. Fixes a bug of losing permissions.
	- Added a new permission node 'groupmanager.op'. This will cause players with this node to be treated as op's when
	  using GroupManager commands (they will still require each commands permission node to use them).
	- Prevent Null entries in group inheritance from throwing errors.
v 2.0:
	- Fix GM reporting of permission inheritance to retain the correct order. Lower inheritance groups can no longer negate a higher groups permissions.
	- Fix an error I caused trying to modify an unmodifiable list when parsing '*' permissions.
	- Don't throw errors when attempting to remove permission attachments (bukkit will have already removed it).